# capataz

./: Makefile.am  NEWS.md  README.md  configure.ac
man/: Makefile.am  capataz.xml
shell-completion/: Makefile.am
shell-completion/zsh/: Makefile.am  _capataz
src/: Makefile.am  main.c
